# Qt-Tetris

./: .gitignore  Block.cpp  Block.h  BlockFactory.cpp  BlockFactory.h  CMakeLists.txt  GameEngine.cpp  GameEngine.h  GameField.cpp  GameField.h  GameStats.h  GameWidget.h  InputHandler.cpp  InputHandler.h  LICENSE  MainWindow.cpp  MainWindow.h  Position.h  README.md  ScoreManager.cpp  ScoreManager.h  TetrisGame.cpp  TetrisGame.h  main.cpp  resources.qrc
config/: GameConfig.cpp  GameConfig.h
data/: GameStats.h  Position.h
game/: Block.cpp  Block.h  BlockFactory.cpp  BlockFactory.h  GameEngine.cpp  GameEngine.h  GameField.cpp  GameField.h  InputHandler.cpp  InputHandler.h  ScoreManager.cpp  ScoreManager.h
resources/icons/: games_tetris.icns
ui/: GameWidget.cpp  GameWidget.h  MainWindow.cpp  MainWindow.h
